renamed pod due to names clash

--- a/Example/SmartSegmentedControlSwift/Base.lproj/Main.storyboard
+++ b/Example/SmartSegmentedControlSwift/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SVSegmentedControlSwift_Example" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SmartSegmentedControlSwift_Example" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -30,7 +30,7 @@
                                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oTQ-jP-q60">
                                                 <rect key="frame" x="0.0" y="8" width="375" height="29"/>
                                                 <subviews>
-                                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="gbo-1S-Ksi" customClass="SVSegmentedControl" customModule="SVSegmentedControl">
+                                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="gbo-1S-Ksi" customClass="SmartSegmentedControl" customModule="SmartSegmentedControl">
                                                         <rect key="frame" x="0.0" y="0.0" width="121" height="29"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="28" id="pyS-rw-LvF"/>
